OO-5881: add more metadata to certificates made with PDF forms