@@ -142,7 +142,7 @@ public class CertificateChooserController extends UploadCertificateController {
 					selectedTemplate = null;
 				} else if(StringHelper.isLong(selectedkey)) {
 					try {
-						Long key = new Long(selectedkey);
+						Long key = Long.valueOf(selectedkey);
 						selectedTemplate = certificatesManager.getTemplateById(key);
 					} catch (NumberFormatException e) {
 						logError("", e);
